tests/fixtures/invalid/theme_b.seed
// Invalid: Circular dependency and type errors
import "@stdlib/themes/theme_a"

theme b extends a {
  button {
    primary {
      // Invalid: Incorrect type usage
      bg: color("red.500")  // Should be color(red.500)
      text: color(white)
      
      // Invalid: Missing type for nested properties
      hover: {
        bg: "red.600"       // Missing color type
        opacity: "0.9"      // Should be number(0.9)
      }
    }
  }

  // Invalid: Missing required properties from schema
  card {
    // Missing required background color
    border: {
      // Invalid: Incorrect size type usage
      width: size("1px")    // Should be size(1px)
      style: "solid"        // Should be enum(solid)
      color: color(gray)    // Invalid color token
    }
  }

  // Invalid: Unknown component type
  unknown {
    property: value
  }
}
